--- a/dada/extras/documentation/pod_source/changes_6_x.pod
+++ b/dada/extras/documentation/pod_source/changes_6_x.pod
@@ -1,4 +1,34 @@
-=head1 6.1.0
+=head1 6.1.1
+
+=head2 Summary 6.1.1
+
+This release fixes bugs found in the v6.1.0 version of Dada Mail.
+
+=head2 Changes 6.1.1
+
+Working with the new confirmation link token system, we've noticed that strange things seem to happen, 
+when the IP address used to initiate, say, a subscription, or unsubscription is different from the IP address
+used to confirm that same sub/unsub. This may point to an automated process following these links, instead of 
+an actual human. For now, these types of events will be logged in the error log, but may be more actively handled
+in future versions of Dada Mail. 
+
+=head2 Bugfixes 6.1.1
+
+=head3 Hidden Fields are shown in the Subscription Form
+
+L<https://github.com/justingit/dada-mail/issues/354>
+
+=head3 "Save, Then Test" in Mail Sending >> Options changes preferences
+
+L<https://github.com/justingit/dada-mail/issues/353>
+
+=head3 Bug in DADA::App::BounceHandler::Rules prevents Bounce Handler from properly parsing bounces
+
+https://github.com/justingit/dada-mail/issues/355
+
+=head3 Default CAPTCHA will fail, even if it says it won't
+
+L<https://github.com/justingit/dada-mail/issues/356>
 
 =head2 Summary 6.1.0
 
