--- a/dada/extras/documentation/pod_source/changes_6_x.pod
+++ b/dada/extras/documentation/pod_source/changes_6_x.pod
@@ -1,3 +1,9 @@
+=head1 6.2.1
+
+=head2 Summary 6.2.1
+
+There was a mis-labeling of v6.2.0 as v6.1.2, which never had a release. v6.2.1 is released simply to fix this bobble. 
+
 =head1 6.2.0
 
 =head2 Summary 6.2.0
