--- a/dada/extras/documentation/pod_source/features-amazon_ses_support.pod
+++ b/dada/extras/documentation/pod_source/features-amazon_ses_support.pod
@@ -49,15 +49,9 @@ One caveat of using Bounce Handler is that the Bounce Handler email address has 
 
 =head2 Method: Amazon SES API
 
-=head3 Additional Things to Install
-
-Currently, Dada Mail relies heavily on the Amazon SES Developer Tools and the scripts that come with it to send out email messages using Amazon SES. You'll need to separately install these scripts.
-
-B<v4.9.0> of Dada Mail does not need the B<ses-send-email.pl> script, but instead uses it's own (superior, I think) method in its place. 
-
 =head3 Performance 
 
-Sending via Amazon SES is done with a persistent HTTP connection (as of v4.9.0 of Dada Mail), so performance shouldn't be too bad. Expect around .3 seconds/message for I<just> passing the email message from Dada Mail to the Amazon SES service. 
+Sending via Amazon SES is done with a persistent HTTP connection, so performance shouldn't be too bad. Expect around .3 seconds/message for I<just> passing the email message from Dada Mail to the Amazon SES service. 
 
 =head2 Method: Amazon SES SMTP Interface
 
@@ -88,7 +82,7 @@ Email headers that are not supported by Amazon SES are automatically not sent ou
 
 =head3 Sending Quota
 
-Amazon SES starts out with a small sending quota - 1,000 messages you may send in 24 hours, with a maximum 1 message you can send every second. This quota can grow (and quickly), but make sure not to try to send out quicker than your quota can grow. 
+Amazon SES starts out with a small sending quota - 10,000 messages you may send in 24 hours, with a maximum 5 messages you can send every second. This quota can grow (and quickly), but make sure not to try to send out quicker than your quota can grow. 
 
 =head4 More Information
 
@@ -131,117 +125,35 @@ L<https://aws-portal.amazon.com/gp/aws/developer/registration>
 
 You'll be asked to create a new Amazon account and give Amazon your payment information.
 
-None of this information will be saved within Dada Mail.
-
 =head2 Method: Amazon SES API
 
-There's a few steps you need to take, before you can start using the Amazon SES API with Dada Mail. None of them are particularily hard, but it's suggested you have a fairly good understanding on how to administrate your own hosting account, can make simple edits to already-created perl scripts and don't mind taking a little while to make sure everything is working. Take the time to set everything up correctly.
+During the installation process, using the included Dada Mail Installer, you'll need to plug in your B<AWS Access Key ID> and a B<AWS Secret Access Key>. Both can found in the B<Security Credentials> section of your AWS account (Under, B<My Account / Console>, click on, B<Security Credentials>). 
 
-=head3 Install the Amazon SES Developer Tools
-
-The Amazon SES Developer Tools are located at: 
-
-L<http://aws.amazon.com/code/Amazon-SES/8945574369528337> 
-
-As of 11/17/11, this is the direct link to the developer tools: 
-
-L<http://d36cz9buwru1tt.cloudfront.net/catalog/attachments/ses-tools-2011-10-31.zip>
-
-These scripts require you to create a AWS Credentials file, which is outlined here: 
-
-L<http://docs.amazonwebservices.com/ses/latest/DeveloperGuide/InitialSetup.Scripts.html>
-
-Once you've created the AWS credentials file, you'll want to try out and test the SES scripts, C<ses-send-email.pl> and C<ses-verify-email-address.pl> individually. Docs on these three scripts are located at: 
-
-L<http://docs.amazonwebservices.com/ses/latest/DeveloperGuide/SendingEmail.Raw.html>
-
-L<http://docs.amazonwebservices.com/ses/latest/DeveloperGuide/InitialSetup.EmailVerification.html>
-
-L<http://docs.amazonwebservices.com/ses/latest/DeveloperGuide/ManagingActivity.SendingLimits.html>
-
-=head3 Configure Dada Mail with your Amazon SES configuration. 
-
-None of the Amazon AWS credentials are stored within Dada Mail - only in that AWS Credentials file. 
-
-But, you'll need to tell Dada Mail where that AWS Credentials file is, as well as two of the three scripts, C<ses-verify-email-address.pl> and C<ses-get-stats.pl> (C<ses-send-email.pl> is not used directly by Dada Mail). 
-
-In your C<.dada_config> file, add the following lines: 
-
-	$AMAZON_SES_OPTIONS = { 
-		aws_credentials_file            => undef, 
-		ses_verify_email_address_script => undef, 
-		ses_get_stats_script            => undef, 
-	};
-
-And fill out the necessary information. In this example: 
-
-	$AMAZON_SES_OPTIONS = { 
-		aws_credentials_file            => '/home/myaccount/aws-credentials', 
-		ses_verify_email_address_script => '/home/myaccount/ses/bin/ses-verify-email-address.pl',
-		ses_get_stats_script            => '/home/myaccount/ses/bin/ses-get-stats.pl', 
-		 
-	};
-
-C</home/myaccount> is my home directory, C<aws-credentials> is the name of the AWS Credentials file
-and I copied the, C<bin> directory from the developer tools download into a directory I created called, C<ses>. 
-
-If you then change into the C<ses> directory, you should be able to run the scripts. For example: 
-
-	./ses-verify-email-address.pl -k /home/myaccount/aws-credentials -v me@example.com
-
-I<and once that email address is verified...>
-
-	./ses-send-email.pl -k /home/myaccount/aws-credentials -r
-	From: me@example.com
-	To: me@example.com
-	Subject: test to myself! 
-	
-	Hello, this is a test to myself! 
-
-I<(control D)>
-
-If you run these scripts outside of this directory, you'll more than likely get an error, like this: 
-
- Can't locate SES.pm in @INC:
-
-Either follow the directions that come with the C<README> file of the SES Developer Tools, or, what may be 
-helpful, is just to add a, C<use lib qw(...)> line in the C<ses-send-email.pl>, C<ses-verify-email-address.pl> and C<ses-get-stats.pl>
-scripts themselves. For our examples, we just have to add the directory the scripts are in: 
-
-I<Top of ses-send-email.pl and/or ses-verify-email-address.pl)> 
-
-	#!/usr/bin/perl -w
-	use lib qw(/home/myaccount/ses/bin); # <- now this script can find the, SES.pm module!
-
-Once these steps are taken, Amazon SES should be working on your account and 
-ready to be used within Dada Mail.
+The installer will tell you if you meet all the requirements to use Amazon SES, and allow you to test the B<AWS Access Key ID> and B<AWS Secret Access Key> that you plug in. 
 
 =head3 Configuring Dada Mail to use the Amazon SES API
 
 In Dada Mail, log into your list control panel and go to: 
 
-I<Mail Sending - Sending Preferences> 
+I<Mail Sending - Options> 
 
 There should be an option, along with sending via the sendmail command and sending via SMTP, 
-to I<Send Email Using the Amazon Simple Email Service>. 
+to send via I<Amazon Simple Email Service >. 
 
-If Dada Mail cannot find your AWS Credentials file, I<ses-send-email.pl> script, I<ses-verify-email-address.pl> script or the C<ses-get-stats.pl> script
-or you're missing any required CPAN modules, it'll notify you. Don't try using sending via this method, 
-until all these prerequisites are met.
-
+If Dada Mail notices you're missing any required CPAN modules, it'll notify you. Don't try using sending via this method, until all these prerequisites are met.
 
 =head3 Verify your List Owner
 
 Before you can send any email messages using Amazon SES in Dada Mail, you have to 
-verify your list owner. Dada Mail has a small frontend utility to the, C<ses-verify-email-address.pl>
-script to do this. Under, I<Amazon SES Tools>, right on the I<Sending Preferences> screen, you should see
-a little verifier. Enter your List Owner email address and click, I<Verify Address for Sending>. 
+verify your list owner.
 
-Once verified, you may use Dada Mail's built-in Sending Preferences Tester to see if Amazon SES sending is working. 
+Under, I<Amazon SES Tools>, right on the I<Mail Sending  Options> screen, you should see a little verifier. Enter your List Owner email address and click, I<Verify Address for Sending>. You can also use verify addresses in the SES console, itself. 
+
+Once verified, you may use Dada Mail's built-in Mail Sending Options Tester to see if Amazon SES sending is working. 
+
 If it is, congratulations! You're now using Amazon SES to send email out, using Dada Mail. You can further test Amazon SES 
 on a small test list by verifying individual addresses in your subscription list using the same verification utility. To 
 really use Amazon SES for mass mailing, you'll need to request full production access from Amazon. 
-
 
 =head2 Method: Amazon SES SMTP Interface
 
@@ -257,7 +169,7 @@ and then configure Dada Mail to use these credentials:
 
 =head3 Configuring Dada Mail to use the Amazon SES SMTP Interface
 
-Log into your Dada Mail List and go to: B<Mail Sending - Sending Preferences> 
+Log into your Dada Mail List and go to: B<Mail Sending - Options> 
 
 Choose, B<Send Email Using SMTP>
 
@@ -285,7 +197,7 @@ Once at the Amazon AWS Console, click the, B<Amazon SES> tab, click on, B<Verifi
 
 You'll want to make sure to send below your Amazon SES sending quota. This can be done automatically by Dada Mail. 
 
-Go to: B<Mail Sending - Mass Mailing Preferences> and check the option, 
+Go to: B<Mail Sending - Mass Mailing Options> and check the option, 
 
 B<Automatically set batching speeds based on your Amazon SES limits>
 
@@ -332,7 +244,7 @@ http://docs.amazonwebservices.com/ses/latest/DeveloperGuide/index.html?DKIM.html
 
 =head1 Bugs
 
-Probably plenty. Please give feedback using the links, below: 
+Please give feedback using the links, below: 
 
 =head1 Feedback Appreciated
 
