--- a/dada/extras/documentation/pod_source/changes_6_x.pod
+++ b/dada/extras/documentation/pod_source/changes_6_x.pod
@@ -1,8 +1,24 @@
-=head1 6.3.0 Alpha
+=head1 6.3.0 Beta 1
 
 =head2 Summary 6.3.0 
 
+v6.3.0 of Dada Mail comes with enhancements to Dada Mail's Amazon SES sending support, Gravatar support and tracking email addresses for message opens/clickthroughs. 
+
 =head2 Features 6.3.0
+
+=head3 Amazon SES setup: Vastly Simplified
+
+Dada Mail's included installer now supports setting up Amazon SES for you - all you'll need to do is give it your B<AWS Access Key ID> and B<AWS Secret Access Key>.
+
+You no longer need to set up a seperate C<aws-credentials> file, or download, configure and install any outside Amazon SES scripts. 
+
+The installer will check to make sure all required CPAN modules are installed, and also has a small tester utility to make sure Amazon SES is working. 
+
+The installer will also be able to detect your previous Amazon SES settings, when you decide to upgrade. 
+
+More information on Dada Mail and Amazon SES: 
+
+L<http://dadamailproject.com/d/features-amazon_ses_support.pod.html>
 
 =head3 Email Tracking for Opens/Clickthroughs
 
@@ -10,10 +26,18 @@ Dada Mail can now be set to optionally track email addresses, when tracking Clic
 
 This feature also requires changes to Dada Mail's SQL schema, which should happen automatically, during the first run of Dada Mail, after an upgrade. One can perform these changes manually, by issuing the following SQL: 
 
-	ALTER TABLE dada_clickthrough_url_log ADD email VARCHAR(80) AFTER url;
-	ALTER TABLE dada_mass_mailing_event_log ADD email VARCHAR(80) AFTER details;
+	ALTER TABLE dada_clickthrough_url_log ADD email VARCHAR(80);
+	ALTER TABLE dada_mass_mailing_event_log ADD email VARCHAR(80);
 
 The option to track email addresses is located in the Tracker's list control panel screen, under, B<Preferences> - B<Track with Email Addresses>. 
+
+=head3 Admin Menu: Archive Count now shown
+
+The list control panel's admin menu will now list how many archives you have, under, B<Message Archives - View (# of messages)>
+
+=head3 Extended Gravatar Support
+
+Gravatars ( https://en.gravatar.com/ ) now show up in the List screen, the List's Archive indexes, and in the B<blog_index.cgi> plugin. 
 
 
 =head3 Password Protect Directories Plugin: Works with already-exisiting .htaccess
@@ -23,6 +47,12 @@ In past versions, the Password Protect Directories Plugin would write (and if th
 Now, this plugin will first look and see if an C<.htaccess> file exists, and if so, if specific directives for the plugin itself exist. If so, the plugin will only update the file and change the directives it needs in order for the plugin to work. 
 
 It's advised, that if you upgrade to first disable the plugin's cronjob, remove the directives in the C<.htaccess> file specific for the plugin (or the entire C<.htaccess> file, if nothing else requires this file, upgrade, and then re-set the cronjob for this plugin. 
+
+=head3 Geo IP databases Updated
+
+Dada Mail has updated it's Geo IP databases to the newest, April release. 
+
+I<This product includes GeoLite data created by MaxMind, available from L<http://www.maxmind.com>.>
 
 =head1 6.2.2
 
