--- a/dada/extras/documentation/pod_source/changes_6_x.pod
+++ b/dada/extras/documentation/pod_source/changes_6_x.pod
@@ -2,7 +2,7 @@
 
 =head2 Summary 6.3.0 
 
-v6.3.0 of Dada Mail comes with enhancements to Dada Mail's Amazon SES sending support, Gravatar support and support for tracking email addresses on message opens/clickthroughs. 
+v6.3.0 of Dada Mail comes with enhancements to Dada Mail's Amazon SES sending support, Gravatar support, block css to inline css conversion for HTML messages (experimental), and support for tracking email addresses on message opens/clickthroughs. 
 
 =head2 Features 6.3.0
 
@@ -10,11 +10,11 @@ v6.3.0 of Dada Mail comes with enhancements to Dada Mail's Amazon SES sending su
 
 Dada Mail's included installer now supports setting up Amazon SES for you - all you'll need to do is give it your B<AWS Access Key ID> and B<AWS Secret Access Key>.
 
-You no longer need to set up a seperate C<aws-credentials> file, or download, configure and install any outside Amazon SES scripts. 
+You no longer need to set up a seperate C<aws-credentials> file, or download, configure and install any outside Amazon SES scripts.
 
-The installer will check to make sure all required CPAN modules are installed, and also has a small tester utility to make sure Amazon SES is working. 
+The installer will check to make sure all required CPAN modules are installed, and also has a small tester utility to make sure Amazon SES is working. Be warned that Amazon SES sending does have a long list of prerequisites, some of which may need to be seperately installed via CPAN. 
 
-The installer will also be able to detect your previous Amazon SES settings, when you decide to upgrade. 
+The installer will also be able to detect your previous Amazon SES settings, when you decide to upgrade.
 
 More information on Dada Mail and Amazon SES: 
 
@@ -22,7 +22,7 @@ L<http://dadamailproject.com/d/features-amazon_ses_support.pod.html>
 
 =head3 Email Tracking for Opens/Clickthroughs
 
-Dada Mail can now be set to optionally track email addresses, when tracking Clickthroughs and Message Opens. These address can currently be exported per mass mailing. This feature is somewhat experimental, as features that can stem from this new ability will be vastly expanded on in the future. We'd like to get the feature out there, in it's current state, to start gathering information to be used for analytic support. 
+Dada Mail can now be set to optionally track email addresses, when tracking Clickthroughs and Message Opens. These address can currently be exported per mass mailing. This feature is somewhat experimental, as features that can stem from this new ability will be vastly expanded on in the future. We'd like to get the feature out there, in it's current state, to start gathering information to be used for analytic support and gain feedback on this new feature. 
 
 This feature also requires changes to Dada Mail's SQL schema, which should happen automatically during the first run of Dada Mail, right after an upgrade. One can perform these changes manually, by issuing the following SQL: 
 
@@ -30,6 +30,18 @@ This feature also requires changes to Dada Mail's SQL schema, which should happe
 	ALTER TABLE dada_mass_mailing_event_log ADD email VARCHAR(80);
 
 The option to track email addresses is located in the Tracker's list control panel screen, under, B<Preferences> - B<Track with Email Addresses>. 
+
+=head3 Mass Mailings:  Convert CSS <style> blocks to inline styles in HTML messages
+
+Support has been added to Dada Mail to allow you to author HTML messages with your CSS stylings in the head of your document (easy to author), but have the CSS converted to inline styles (more universally supported in mail readers). 
+
+This option can be found in the list control panel under, B<Mass Mailing - Options>: I<Convert CSS style blocks to inline styles in HTML messages (Experimental)> 
+
+This is an experimental feature, and you will have to seperately install the C<CSS::Inliner> Perl CPAN module. 
+
+Installer CPAN modules is covered here: 
+
+L<http://dadamailproject.com/d/FAQ-general.pod.html#how_do_you_install__cpan_perl_modules>
 
 =head3 Admin Menu: Archive Count now shown
 
@@ -56,6 +68,22 @@ I<This product includes GeoLite data created by MaxMind, available from L<http:/
 =head3 blog_index.cgi extension: cached screens
 
 The HTML/Javascript data that the C<blog_index.cgi> extension makes are now cached, helping relieve unneeded load on your backend. 
+
+=head3 Support in Detecting Outside CPAN Perl Libraries
+
+To help make using the more advanced features of Dada Mail - ones that require you to install additional Perl CPAN modules that aren't included with Dada Mail (Amazon SES, Gravatars, JSON, etc), Dada Mail itself will attempt to detect common places where private, account-specific Perl libraries are placed. By default, Dada Mail will look for Perl Libraries in the home directory of an account. 
+
+If you are running a Cpanel-powered account, Dada Mail will play well with how Cpanel's B<Perl Module Installer> work.
+
+=head2 Bugfixes 6.3.0
+
+=head3 Bridge: Check to make sure List Owner/List Admin isn't the same as List Email doesn't account for email casing
+
+L<https://github.com/justingit/dada-mail/issues/367>
+
+=head3 Invalid List error on List Invitation Confirmations
+
+L<https://github.com/justingit/dada-mail/issues/366>
 
 =head1 6.2.2
 
