--- a/dada/extras/documentation/pod_source/FAQ-install_upgrade.pod
+++ b/dada/extras/documentation/pod_source/FAQ-install_upgrade.pod
@@ -103,5 +103,74 @@ If those directories do not exist, see if you cannot create your own new directo
 
 Change this new directory's permissions to, C<777>, give the Dada Mail Installer the full, absolute path to this new directory and see if its accepted. We suggest that you reset the permissions to the new directory you created to, C<755>, to be less of a security problem, once the installation is complete. 
 
+=head1 Upgrading Dada Mail From Different Installation Types
+
+Before upgrading Dada Mail, find out how you installed and configured Dada Mail before. If you don't know or aren't sure, don't upgrade Dada Mail: you will run into major headaches. 
+
+=head2 "Basic", or, "Contemporary"? (Or Simple Scripts?)
+
+We're going to only differentiate between two types of installations: "Basic" and, "Contemporary" I<(If you installed Dada Mail using the included installer, you have a B<Contemporary> installation)>
+
+=head3 Basic Installation 
+
+A, B<Basic> installation changes the configuration variables right in the, C<dada/DADA/Config.pm> file - usually you want to be very much aware of the following variables: 
+
+=over
+
+=item * $PROGRAM_ROOT_PASSWORD
+
+=item * $FILES
+
+=item * $MAILPROG
+
+=item * $PROGRAM_URL
+
+=back
+
+You'll know if you have a B<Basic> installation of Dada Mail if the
+ C<$FILES> variable in the, C<dada/DADA/Config.pm> file is  filled out to a directory that I<actually> exists and that directory holds files/directories that have something to do with Dada Mail. 
+
+If you are running a B<Basic> Installation of Dada Mail, we really suggest upgrading by taking note of where your C<$FILES> variable is located and importing the old information I<after> a clean installation.
+
+=head4 More Information
+
+L<http://dadamailproject.com/support/documentation/basic_to_contemporary_installation.pod.html>
+
+=head3 Contemporary Installation 
+
+A Contemporary Installation uses an outside configuration file to set the configuration variables in. 
+
+You'll know if you have a Contemporary Installation, if those same four variables in the, C<dada/DADA/Config.pm> file: 
+
+=over
+
+=item * $PROGRAM_ROOT_PASSWORD
+
+=item * $FILES
+
+=item * $MAILPROG
+
+=item * $PROGRAM_URL
+
+=back
+
+Are still in their default values and your Dada Mail seems to be 
+functioning fine. This probably means that your config variables are being read from an outside config file. 
+
+For upgrade purposes, note what the, C<$PROGRAM_CONFIG_FILE_DIR> in the, C<dada/DADA/Config.pm> is set to. It's OK if it's only set to, C<auto>. 
+
+=head3 Simple Scripts Installation
+
+If you installed Dada Mail through Simple Scripts (L<http://simplescripts.com>) you have two good choices when it comes to upgrading. 
+
+=head4 Upgrade Through Simple Scripts
+
+Upgrade a Simple Scripts installed Dada Mail through Simple Scripts on interface (look for an "Upgrade" link, or Simple Scripts may alert you of updates). 
+
+=head4 Turn a Simple Scripts Install into a Contemporary Installation
+
+If you want to use the included Dada Mail installer to upgrade Dada Mail (perhaps, you purchased Pro Dada?), you can turn a Simple Scripts install into a Contemporary Installation with these directions: 
+
+L<http://dadamailproject.com/d/upgrade_from_simple_scripts.pod.html>
 
 =cut
